@@ -9,6 +9,7 @@ Semantic MediaWiki 1.7.1 is currently in beta-quality and is not recommended for
 production until the actual release.
 
 * Fixed bug in "further results" links causing the main column to be displayed twice on Special:Ask.
+* Fixed #ask and #show 'format' parameter which now is case-insensitive again (bug 31138).
 
 == SMW 1.7 ==
 
@@ -19,7 +20,7 @@ Released on January 1, 2012.
   configuration called $smwgSparqlDefaultGraph
 * Use of native MediaWiki sortable tables for the table formats.
 * Added value distribution functionality that can be used by result formats. 
-* Added validation and manipulation of the format parameter using Validator.
+* Added validation and manipulation of the 'format' parameter using Validator.
 * Added 'class' parameter to the 'table' format, which allows setting the CSS
   class.
 * Added automatically-generated CSS classes for rows and cells in 'table' format.
